--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    background-color: blue;
+    background-color: coral;
     font-size: 62.5%;
 }
 
@@ -14,8 +14,24 @@
 h1 {
     color: white;
     font-size: 5rem;
-    margin-bottom: 5rem;
 }
+
+h2 {
+    color: white;
+    font-size: 3rem;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
+    padding-top: 5rem;
+}
+
+header {
+    padding-top: 9rem;
+    display: flex;
+    padding: 5rem;
+    margin: 0 auto;
+}
+
+
 
 .container {
     width: 100vw;
@@ -25,6 +41,7 @@ h1 {
     align-items: center;
     max-width: 80rem;
     margin: 0 auto;
+    padding: 2rem;
 } 
 
 .container > * {
@@ -52,3 +69,30 @@ h1 {
     display: none;
 }
 
+.choice-container {
+    display: flex;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    font-size: 1.8rem;
+    border-color: white;
+    background-color: teal;
+}
+
+.choice-prefix {
+    padding: 1.5rem 2.5rem;
+    background-color: green;
+    color: white;
+}
+
+.choice-text {
+    padding: 1.5rem;
+}
+
+.number {
+    padding-bottom: 0%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 15rem;
+}
